--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZBUMV5",
+  "name": "ZBUMV4",
   "version": "1.0.0",
   "description": "none",
   
@@ -9,7 +9,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.15.6",
-    "multer":"^1.4.2",
-    "ws":"^8.3.0"
+    "multer":"^1.4.2"
   }
 }
